--- a/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
+++ b/WWDC Scholars 2015/WWDC Scholars 2015/Base.lproj/Main.storyboard
@@ -3,7 +3,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -231,18 +230,19 @@
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="144" id="0ku-Fq-mk2"/>
+                                    <constraint firstAttribute="height" constant="163" id="3hN-9Z-g9x"/>
+                                    <constraint firstAttribute="width" constant="399" id="6cT-Fh-ete"/>
                                     <constraint firstAttribute="height" constant="135" id="9td-QQ-yus"/>
                                     <constraint firstAttribute="width" secondItem="5Uo-4A-3Q5" secondAttribute="height" multiplier="400:161" id="EZC-T3-icB"/>
                                     <constraint firstAttribute="width" constant="370" id="LAM-H0-IVc">
                                         <variation key="heightClass=regular-widthClass=compact" constant="375"/>
                                     </constraint>
-                                    <constraint firstAttribute="width" constant="375" id="Vij-R9-wRq"/>
                                     <constraint firstAttribute="width" secondItem="5Uo-4A-3Q5" secondAttribute="height" multiplier="125:48" id="Wkb-HS-HAv"/>
                                     <constraint firstAttribute="height" constant="161" id="YWA-Oa-S5q"/>
                                     <constraint firstAttribute="width" secondItem="5Uo-4A-3Q5" secondAttribute="height" multiplier="70:27" id="Zhx-wX-u82"/>
                                     <constraint firstAttribute="height" constant="144" id="jX1-Bf-haJ"/>
+                                    <constraint firstAttribute="width" secondItem="5Uo-4A-3Q5" secondAttribute="height" multiplier="399:163" id="oxv-s5-nY5"/>
                                     <constraint firstAttribute="width" secondItem="5Uo-4A-3Q5" secondAttribute="height" multiplier="370:143" id="qnh-2V-N3A"/>
-                                    <constraint firstAttribute="height" constant="144" id="rnL-lJ-3PL"/>
                                     <constraint firstAttribute="width" constant="375" id="vBO-l4-QO3"/>
                                     <constraint firstAttribute="width" constant="350" id="z19-lJ-0kv"/>
                                     <constraint firstAttribute="width" constant="400" id="zhb-tG-1aQ"/>
@@ -250,16 +250,17 @@
                                 <variation key="default">
                                     <mask key="constraints">
                                         <exclude reference="0ku-Fq-mk2"/>
+                                        <exclude reference="3hN-9Z-g9x"/>
+                                        <exclude reference="6cT-Fh-ete"/>
                                         <exclude reference="9td-QQ-yus"/>
                                         <exclude reference="EZC-T3-icB"/>
                                         <exclude reference="LAM-H0-IVc"/>
-                                        <exclude reference="Vij-R9-wRq"/>
                                         <exclude reference="Wkb-HS-HAv"/>
                                         <exclude reference="YWA-Oa-S5q"/>
                                         <exclude reference="Zhx-wX-u82"/>
                                         <exclude reference="jX1-Bf-haJ"/>
+                                        <exclude reference="oxv-s5-nY5"/>
                                         <exclude reference="qnh-2V-N3A"/>
-                                        <exclude reference="rnL-lJ-3PL"/>
                                         <exclude reference="vBO-l4-QO3"/>
                                         <exclude reference="z19-lJ-0kv"/>
                                         <exclude reference="zhb-tG-1aQ"/>
@@ -268,16 +269,17 @@
                                 <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="constraints">
                                         <exclude reference="0ku-Fq-mk2"/>
+                                        <include reference="3hN-9Z-g9x"/>
+                                        <include reference="6cT-Fh-ete"/>
                                         <exclude reference="9td-QQ-yus"/>
                                         <exclude reference="EZC-T3-icB"/>
                                         <exclude reference="LAM-H0-IVc"/>
-                                        <include reference="Vij-R9-wRq"/>
                                         <exclude reference="Wkb-HS-HAv"/>
                                         <exclude reference="YWA-Oa-S5q"/>
                                         <exclude reference="Zhx-wX-u82"/>
                                         <exclude reference="jX1-Bf-haJ"/>
+                                        <include reference="oxv-s5-nY5"/>
                                         <exclude reference="qnh-2V-N3A"/>
-                                        <include reference="rnL-lJ-3PL"/>
                                         <exclude reference="vBO-l4-QO3"/>
                                         <exclude reference="z19-lJ-0kv"/>
                                         <exclude reference="zhb-tG-1aQ"/>
@@ -288,62 +290,58 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="5Uo-4A-3Q5" firstAttribute="leading" secondItem="phv-PG-Wg8" secondAttribute="leadingMargin" constant="-3" id="2d5-Rv-9ja"/>
+                            <constraint firstAttribute="trailing" secondItem="WO0-05-mmK" secondAttribute="trailing" id="384-jV-7Vj"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="leading" secondItem="5Uo-4A-3Q5" secondAttribute="trailing" constant="-391" id="5qA-zt-3Ko"/>
                             <constraint firstItem="5Uo-4A-3Q5" firstAttribute="bottom" secondItem="ENm-xb-5ot" secondAttribute="top" id="8gL-5j-p86"/>
                             <constraint firstItem="5Uo-4A-3Q5" firstAttribute="trailing" secondItem="WO0-05-mmK" secondAttribute="trailing" id="8zf-Ud-jxy"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="leading" secondItem="phv-PG-Wg8" secondAttribute="leading" id="9YA-Ar-sZE"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="top" secondItem="I7c-5g-PcP" secondAttribute="bottom" constant="-20" id="AJr-us-eZh"/>
+                            <constraint firstItem="WO0-05-mmK" firstAttribute="bottom" secondItem="ENm-xb-5ot" secondAttribute="top" id="CQm-RK-cPu"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="centerX" secondItem="5Uo-4A-3Q5" secondAttribute="centerX" constant="-0.5" id="F0y-FN-2z6"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="leading" secondItem="5Uo-4A-3Q5" secondAttribute="leading" id="FAb-aL-TQi"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="leading" secondItem="5Uo-4A-3Q5" secondAttribute="trailing" constant="-374" id="Jhj-dU-Gq1"/>
                             <constraint firstItem="ENm-xb-5ot" firstAttribute="top" secondItem="WO0-05-mmK" secondAttribute="bottom" id="LKh-Da-uzA"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="bottom" secondItem="5Uo-4A-3Q5" secondAttribute="bottom" id="V1U-Yh-n0e"/>
+                            <constraint firstItem="WO0-05-mmK" firstAttribute="top" secondItem="phv-PG-Wg8" secondAttribute="top" id="YVB-Fe-6Lx"/>
                             <constraint firstAttribute="trailing" secondItem="WO0-05-mmK" secondAttribute="trailing" id="Z0w-BT-EZQ"/>
-                            <constraint firstItem="5Uo-4A-3Q5" firstAttribute="centerX" secondItem="WO0-05-mmK" secondAttribute="centerX" id="aDM-WH-6Hy"/>
                             <constraint firstItem="5Uo-4A-3Q5" firstAttribute="leading" secondItem="WO0-05-mmK" secondAttribute="trailing" constant="-387" id="aKM-NA-6jZ"/>
-                            <constraint firstItem="WO0-05-mmK" firstAttribute="top" secondItem="phv-PG-Wg8" secondAttribute="top" id="bHy-pk-35e"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="leading" secondItem="5Uo-4A-3Q5" secondAttribute="leading" constant="-13" id="bNl-eh-We9"/>
-                            <constraint firstAttribute="trailing" secondItem="WO0-05-mmK" secondAttribute="trailing" id="bO6-AA-Oqj"/>
-                            <constraint firstItem="WO0-05-mmK" firstAttribute="bottom" secondItem="ENm-xb-5ot" secondAttribute="top" id="btS-cJ-T03"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="centerX" secondItem="5Uo-4A-3Q5" secondAttribute="centerX" constant="-1" id="cJ4-2l-DK4"/>
                             <constraint firstItem="5Uo-4A-3Q5" firstAttribute="top" secondItem="I7c-5g-PcP" secondAttribute="bottom" constant="575" id="cNw-II-e0W"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="trailing" secondItem="5Uo-4A-3Q5" secondAttribute="trailing" constant="12" id="dB3-D4-vfh"/>
+                            <constraint firstItem="WO0-05-mmK" firstAttribute="leading" secondItem="5Uo-4A-3Q5" secondAttribute="trailing" constant="-399" id="frZ-RJ-jRv"/>
                             <constraint firstItem="WO0-05-mmK" firstAttribute="top" secondItem="phv-PG-Wg8" secondAttribute="topMargin" id="hmH-HS-DgD"/>
+                            <constraint firstItem="WO0-05-mmK" firstAttribute="leading" secondItem="phv-PG-Wg8" secondAttribute="leading" id="iTF-QF-o5h"/>
                             <constraint firstItem="5Uo-4A-3Q5" firstAttribute="top" secondItem="I7c-5g-PcP" secondAttribute="bottom" constant="637" id="ll8-Ic-rVX"/>
-                            <constraint firstItem="5Uo-4A-3Q5" firstAttribute="leading" secondItem="WO0-05-mmK" secondAttribute="trailing" constant="-387" id="oEz-yz-Kex"/>
                             <constraint firstItem="5Uo-4A-3Q5" firstAttribute="leading" secondItem="WO0-05-mmK" secondAttribute="trailing" constant="-384" id="oUt-H5-lPB"/>
-                            <constraint firstItem="WO0-05-mmK" firstAttribute="leading" secondItem="phv-PG-Wg8" secondAttribute="leading" id="saj-CB-cgO"/>
-                            <constraint firstAttribute="bottomMargin" secondItem="5Uo-4A-3Q5" secondAttribute="bottom" constant="-1" id="vWw-Qc-eqG"/>
+                            <constraint firstItem="5Uo-4A-3Q5" firstAttribute="top" secondItem="WO0-05-mmK" secondAttribute="bottom" constant="-162" id="toU-Ls-p2i"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="5Uo-4A-3Q5"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="2d5-Rv-9ja"/>
-                                <exclude reference="8gL-5j-p86"/>
-                                <exclude reference="8zf-Ud-jxy"/>
-                                <exclude reference="aDM-WH-6Hy"/>
-                                <exclude reference="aKM-NA-6jZ"/>
-                                <exclude reference="cNw-II-e0W"/>
-                                <exclude reference="ll8-Ic-rVX"/>
-                                <exclude reference="oEz-yz-Kex"/>
-                                <exclude reference="oUt-H5-lPB"/>
-                                <exclude reference="vWw-Qc-eqG"/>
+                                <exclude reference="384-jV-7Vj"/>
                                 <exclude reference="5qA-zt-3Ko"/>
                                 <exclude reference="AJr-us-eZh"/>
+                                <exclude reference="CQm-RK-cPu"/>
                                 <exclude reference="F0y-FN-2z6"/>
                                 <exclude reference="FAb-aL-TQi"/>
                                 <exclude reference="Jhj-dU-Gq1"/>
                                 <exclude reference="V1U-Yh-n0e"/>
-                                <exclude reference="bHy-pk-35e"/>
+                                <exclude reference="YVB-Fe-6Lx"/>
                                 <exclude reference="bNl-eh-We9"/>
-                                <exclude reference="bO6-AA-Oqj"/>
-                                <exclude reference="btS-cJ-T03"/>
                                 <exclude reference="cJ4-2l-DK4"/>
                                 <exclude reference="dB3-D4-vfh"/>
-                                <exclude reference="saj-CB-cgO"/>
+                                <exclude reference="frZ-RJ-jRv"/>
+                                <exclude reference="iTF-QF-o5h"/>
+                                <exclude reference="8gL-5j-p86"/>
+                                <exclude reference="8zf-Ud-jxy"/>
+                                <exclude reference="aKM-NA-6jZ"/>
+                                <exclude reference="cNw-II-e0W"/>
+                                <exclude reference="ll8-Ic-rVX"/>
+                                <exclude reference="oUt-H5-lPB"/>
+                                <exclude reference="toU-Ls-p2i"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -351,31 +349,29 @@
                                 <include reference="5Uo-4A-3Q5"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="2d5-Rv-9ja"/>
-                                <exclude reference="8gL-5j-p86"/>
-                                <exclude reference="8zf-Ud-jxy"/>
-                                <include reference="aDM-WH-6Hy"/>
-                                <exclude reference="aKM-NA-6jZ"/>
-                                <exclude reference="cNw-II-e0W"/>
-                                <exclude reference="ll8-Ic-rVX"/>
-                                <include reference="oEz-yz-Kex"/>
-                                <exclude reference="oUt-H5-lPB"/>
-                                <include reference="vWw-Qc-eqG"/>
+                                <include reference="384-jV-7Vj"/>
                                 <exclude reference="5qA-zt-3Ko"/>
                                 <exclude reference="9YA-Ar-sZE"/>
+                                <include reference="CQm-RK-cPu"/>
                                 <exclude reference="F0y-FN-2z6"/>
                                 <exclude reference="FAb-aL-TQi"/>
                                 <exclude reference="Jhj-dU-Gq1"/>
                                 <exclude reference="V1U-Yh-n0e"/>
+                                <include reference="YVB-Fe-6Lx"/>
                                 <exclude reference="Z0w-BT-EZQ"/>
-                                <include reference="bHy-pk-35e"/>
                                 <exclude reference="bNl-eh-We9"/>
-                                <include reference="bO6-AA-Oqj"/>
-                                <include reference="btS-cJ-T03"/>
                                 <exclude reference="cJ4-2l-DK4"/>
                                 <exclude reference="dB3-D4-vfh"/>
+                                <include reference="frZ-RJ-jRv"/>
                                 <exclude reference="hmH-HS-DgD"/>
-                                <include reference="saj-CB-cgO"/>
+                                <include reference="iTF-QF-o5h"/>
+                                <exclude reference="8gL-5j-p86"/>
+                                <exclude reference="8zf-Ud-jxy"/>
+                                <exclude reference="aKM-NA-6jZ"/>
+                                <exclude reference="cNw-II-e0W"/>
+                                <exclude reference="ll8-Ic-rVX"/>
+                                <exclude reference="oUt-H5-lPB"/>
+                                <include reference="toU-Ls-p2i"/>
                                 <exclude reference="LKh-Da-uzA"/>
                             </mask>
                         </variation>
@@ -639,7 +635,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="1500"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lxM-Mw-dl9">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lxM-Mw-dl9">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="1500"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="GENERAL" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="reZ-zx-Sg9">
